WebCore/page/animation/ImplicitAnimation.h
@@ -74,8 +74,8 @@ private:
     bool m_overridden;          // true when there is a keyframe animation that overrides the transitioning property
 
     // The two styles that we are blending.
-    RenderStyle* m_fromStyle;
-    RenderStyle* m_toStyle;
+    const RenderStyle* m_fromStyle;
+    const RenderStyle* m_toStyle;
 };
 
 } // namespace WebCore
