WebCore/page/animation/KeyframeAnimation.h
@@ -40,14 +40,20 @@ namespace WebCore {
 // for a single RenderObject.
 class KeyframeAnimation : public AnimationBase {
 public:
-    KeyframeAnimation(const Animation* animation, RenderObject* renderer, int index, CompositeAnimation* compAnim)
+    KeyframeAnimation(const Animation* animation, RenderObject* renderer, int index, CompositeAnimation* compAnim, const RenderStyle* unanimatedStyle)
         : AnimationBase(animation, renderer, compAnim)
         , m_keyframes(animation->keyframeList())
         , m_name(animation->name())
         , m_index(index)
+        , m_unanimatedStyle(0)
     {
         // Set the transform animation list
         validateTransformFunctionList();
+        
+        if (unanimatedStyle) {
+            const_cast<RenderStyle*>(unanimatedStyle)->ref();
+            m_unanimatedStyle = unanimatedStyle;
+        }
     }
 
     virtual ~KeyframeAnimation();
@@ -60,6 +66,10 @@ public:
     void setIndex(int i) { m_index = i; }
 
     virtual bool shouldFireEvents() const { return true; }
+    
+    bool hasAnimationForProperty(int property) const;
+    
+    const RenderStyle* unanimatedStyle() const { return m_unanimatedStyle; }
 
 protected:
     virtual void onAnimationStart(double elapsedTime);
@@ -83,6 +93,9 @@ private:
     AtomicString m_name;
     // The order in which this animation appears in the animation-name style.
     int m_index;
+
+    // The style just before we started animation
+    const RenderStyle* m_unanimatedStyle;
 };
 
 } // namespace WebCore
